[package]
name = "coin_market"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.1"
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11.4"
lazy_static = "1.4.0"
futures = "0.3"
once_cell = "1.8.0"
